# llm_query_backend

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
src/: __init__.py  di_container.py  main.py  run.py
src/api/: query_api.py
src/application/: __init__.py  dto.py  usecases.py
src/domain/: __init__.py  entities.py  exceptions.py  interfaces.py
src/infrastructure/: __init__.py  config.py  faiss_service.py  ollama_service.py  template_service.py
src/presentation/: __init__.py  controllers.py  routes.py
tests/: __init__.py
tests/api/: __init__.py  test_query_api.py
