[project]
name = "llm-query-backend"
version = "0.1.0"
description = "RAG Query API with FAISS and Ollama"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "annotated-doc==0.0.3",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "certifi==2025.10.5",
    "click==8.3.0",
    "fastapi==0.120.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "pydantic==2.12.3",
    "pydantic_core==2.41.4",
    "python-dotenv==1.2.1",
    "sniffio==1.3.1",
    "starlette==0.49.2",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "uvicorn==0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ruff>=0.14.7",
]

